# go-modules

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml
.github/workflows/: build-package.yml  ci.yml
src/: main.rs
