[package]
name = "go-modules"
version = "2.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/GOcontroll/go-modules"
readme = "README.md"
homepage = "https://gocontroll.com"
publish = false
authors = ["Maud Spierings"]
description = "A tool to flash the modules in the GOcontroll Moduline controllers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[profile.release]
#strip = true
opt-level = "s"
lto = true
codegen-units = 1
#panic = "abort"


[dependencies]
spidev = "0.6"
inquire = "0.7.5"
indicatif = "0.17.9"
ctrlc = "3.4.5"
tokio = { version = "1.43.0", features = ["rt", "macros", "time", "rt-multi-thread"]}
gpio-cdev = { version = "0.6", features = ["async-tokio"]}
futures = "0.3.31"

[package.metadata.deb]
depends = ["libc-bin"]
section = "misc"
priority = "optional"
copyright = "GOcontroll 2024"
